# clepon-cli

./: README.md  clepon.toml  mise.toml  project_data.json  pyproject.toml
src/clepon/: __main__.py  main.py
src/clepon/commands/: __init__.py  analyze.py  callback.py  init.py
src/clepon/config/: __init__.py  settings.py
src/clepon/models/: __init__.py  function.py  function_argument.py  project.py
src/clepon/services/: __init__.py  project_service.py
src/clepon_cli/commands/: init.py
src/clepon_cli/services/: project_service.py
